<resources>
    <string name="app_name">Blood_bucket</string>
    <string name="username">Enter your email</string>
    <string name="password">Enter your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_member">new user? </string>
    <string name="sign_up_here"> <u>sign up here</u></string>
    <string name="sign_in_here"><u>sign in here</u></string>
    <array name="blood_groups">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </array>
    <array name="cities_groups">
        <item>Dhaka</item>
        <item>Chittagong</item>
        <item>Rajshahi</item>
        <item>Mymensingh</item>
        <item>Khulna</item>
        <item>Sylhet</item>
        <item>Barisal</item>
        <item>Rangpur</item>
        <item>Comilla</item>
    </array>
    <array name="search_Item_selector">
        <item>Name</item>
        <item>Blood Group</item>
        <item>City</item>
    </array>
</resources>